--- a/_logs/2019-08-20.md
+++ b/_logs/2019-08-20.md
@@ -6,11 +6,13 @@ date: 2019-08-20
 
 ### work
 
+- today i fixed a css style loading issue. it was honestly an unfocused mess between having to figure out how to build our app with production settings, why it wasn't connecting to mongo locally (hint: SSL flags that i had to hunt down in the slack history), high key panicking about _actually_ having to dive into webpack and applicable doing research, an all hands meeting in the middle of the day, and lots of _build, refresh, cry_ on repeat. my teammate's inital guess that we were having a specificity issue was correct, though, so go him.
 
 ### non-work
 
 
 ### exercise
 
+- i did my short run last night as promised, but i cut it super short because the heat index was 100F at 9p (lol). elias and i will likely go on a run together later tonight.
 
 ### errata
